--- a/.prettierrc
+++ b/.prettierrc
@@ -1,14 +1,6 @@
 {
-  "printWidth": 140,
   "tabWidth": 2,
   "useTabs": false,
-  "semi": true,
-  "singleQuote": false,
-  "quoteProps": "consistent",
-  "jsxSingleQuote": true,
   "trailingComma": "es5",
-  "bracketSpacing": true,
-  "jsxBracketSameLine": false,
-  "arrowParens": "avoid",
-  "endOfLine": "lf"
+  "semi": false
 }
