--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-three/fiber": "8.0.19",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "suspend-react": "^0.0.8",
     "three": "0.140.2"
   },
   "devDependencies": {
